clear cache on deactivation use classes instead of free format add a test case for FormDataParser remove unused variables